tests/ui/pinned_drop/forget-pinned-drop-impl.stderr
error[E0277]: the trait bound `Struct: _pin_project::__private::PinnedDrop` is not satisfied
 --> tests/ui/pinned_drop/forget-pinned-drop-impl.rs:5:15
  |
5 | #[pin_project(PinnedDrop)] //~ ERROR E0277
  |               ^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `_pin_project::__private::PinnedDrop` is not implemented for `Struct`
 --> tests/ui/pinned_drop/forget-pinned-drop-impl.rs:6:1
  |
6 | struct Struct {
  | ^^^^^^^^^^^^^
